--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ nav .navbar-nav li a:hover {
 
 @media (max-width: 28.75em) {
   .welcome-section {
-    margin-top: 500px;
+    margin-top: 0;
   }
 }
 
