--- a/style.css
+++ b/style.css
@@ -221,20 +221,24 @@ nav .navbar-nav li a:hover {
 
 footer {
   font-weight: 500;
-  padding: 3rem;
+  padding: 2rem;
   background: #00adb5;
   text-shadow: 2px 2px 1px #1f1f1f;
   align-items: center;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  footer {
+    font-size: 1.3rem;
+    padding: 2rem;
+    background: #00adb5;
+    text-shadow: 2px 2px 1px #1f1f1f;
+    align-items: center;
+  }
+}
+
 right_side {
   text-align: right;
   padding-right: 1em;
-}
-
-@media (max-width: 28.75em) {
-  footer {
-    flex-direction: column;
-    text-align: center;
-  }
 }
