--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ nav .navbar-nav li a:hover {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .welcome-section-content {
-    padding: 150px 0 150px 0;
+    margin-top: 250px;
+    margin-bottom: 250px;
   }
 }
 
