--- a/style.css
+++ b/style.css
@@ -83,8 +83,8 @@ nav .navbar-nav li a:hover {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .welcome-section-content {
-    padding-top: 250px;
-    margin-bottom: 250px;
+    padding-top: 600px;
+    padding-bottom: 500px;
   }
 }
 
