--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ nav .navbar-nav li a:hover {
     padding-top: 600px;
     padding-bottom: 500px;
   }
+
+  .projects-section-content {
+    padding-top: 600px;
+  }
 }
 
 .projects-section {
